--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -99,6 +99,8 @@ fos_user:
 easy_admin:
     entities:
         - AppBundle\Entity\User
+        - AppBundle\Entity\UnderwareFeature
+        - AppBundle\Entity\Underware
 
 liip_imagine:
     resolvers:
